# xsimd

./: CMakeLists.txt  README.md
include/simdx/: simd.h
test/: test_compiles.cc  test_intraregister_sort.cc
